update get total like profile , photo details
