# portfolio/routes/api.php
@@ -31,16 +31,21 @@ Route::post('/logout', [AuthUserController::class, 'logout']);
 // home page
 Route::get('/getPhotoData', [HomePageController::class, 'getImages']);
 Route::get('/getFollowData', [HomePageController::class, 'getFollows']);
-Route::get('/getPhotoDetail/{token}', [PhotoDetailController::class, 'getPhotoDetail']);
-Route::get('/comments/{token}', [PhotoDetailController::class, 'getCommentsByPhotoToken']);
 Route::get('/categories', [HomePageController::class, 'getAllCategories']);
 Route::get('/tags', [HomePageController::class, 'getAllTags']);
+
+
+// photo details
+Route::get('/getPhotoDetail/{token}', [PhotoDetailController::class, 'getPhotoDetail']);
+Route::get('/comments/{token}', [PhotoDetailController::class, 'getCommentsByPhotoToken']);
+Route::get('/photo-likes/{token}', [PhotoDetailController::class, 'getPhotoLikes']);
 
 //Profile user
 Route::get('/user-by-username/{username}', [ProfileController::class, 'getUserByUserName']);
 Route::get('/photos-by-username/{username}', [ProfileController::class, 'getPhotosByUserName']);
 Route::get('/galleries-by-username/{username}', [ProfileController::class, 'getGalleriesByUserName']);
 Route::get('/gallery-details-user/{galleries_code}', [ProfileController::class, 'getGalleryDetailUser']);
+Route::get('/total-likes/{username}', [ProfileController::class, 'getTotalLikesByUsername']);
 Route::get('/getFollowingUser/{username}', [FollowController::class, 'followingUser']); // Danh sách người dùng mà user được chỉ định đang theo dõi
 Route::get('/getFollowersUser/{username}', [FollowController::class, 'followersUser']); // Danh sách những người theo dõi user được chỉ định
 
